# AsteroidsCanvasQml

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AsteroidsQml/: AlienShip.qml  Asteroid.qml  AsteroidsSplashScreen.qml  Bullet.qml  CMakeLists.txt  CannonInterface.qml  ControlButton.qml  Debris.qml  GameEngine.qml  GameOver.qml  KeyboardHandler.qml  MenuButton.qml  ObjectState.qml  OuterSpace.qml  PlayerStatusBar.qml  SpaceObject.qml  SpaceParticalSystem.qml  SpaceShip.qml  TestArea.qml  UltiCannons.qml  UltiStatus.qml  WeaponInterface.qml  gameAsteroids.js  gameEngine.js  main.qml
installer/startmenu/: startmenu.pro
installer/startmenu/config/: config.xml
modules/: AlienShip.qml  CMakeLists.txt  OuterSpace.qml  SpaceShip.qml  main.qml
src/: Asteroid.qml  Bullet.qml  CMakeLists.txt  OuterSpace.qml  SpaceObject.qml  SpaceShip.qml  gameAsteroids.js  main.cpp
